cabal-version: 3.0
name:               nandtotetris-assembler
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Adriner Andrade
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

executable nandtotetris-assembler
  import:             warnings
  main-is:            Main.hs
  hs-source-dirs:     src
  other-modules:
    Domain.Instruction
    Domain.Parser
    Domain.Lexer
    Shared.StringUtils
  build-depends:      
    filepath ^>=1.4.301.0,
    base ^>=4.18.3.0,
    text >=1.2 && <2.1,
    regex-tdfa >=1.3
  default-language:   Haskell2010